--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ header {
     font-weight: lighter;
     font-family: inherit; }
 
+a {
+  text-decoration: none;
+  color: black; }
+
 img {
   max-width: 275px;
   display: inline-block;
@@ -42,13 +46,14 @@ img {
 .album1 img {
   width: 100%; }
 
-.photosView1 {
+.photosView1, .photosView2, .photosView3, .photosView4, .photosView5, .photosView6 {
   background-color: #C7C7C7;
+  width: 100%;
   height: 100%; }
-  .photosView1 button {
+  .photosView1 button, .photosView2 button, .photosView3 button, .photosView4 button, .photosView5 button, .photosView6 button {
     display: block;
     margin: 1% 0; }
-  .photosView1 .albumButtons {
+  .photosView1 .albumButtons, .photosView2 .albumButtons, .photosView3 .albumButtons, .photosView4 .albumButtons, .photosView5 .albumButtons, .photosView6 .albumButtons {
     background-color: #8E6950;
     width: 15%; }
 
